added new <div>

--- a/index.html
+++ b/index.html
@@ -182,5 +182,8 @@
         </div>
       </div>
     </footer>
+    <div class="window">
+      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam illo laudantium tempora modi, ducimus vitae veritatis saepe accusantium corporis et.</p>
+    </div>
   </body>
 </html>
