--- a/index.html
+++ b/index.html
@@ -183,6 +183,7 @@
       </div>
     </footer>
     <div class="window">
+      <form action="" class="window__form"></form>
       <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam illo laudantium tempora modi, ducimus vitae veritatis saepe accusantium corporis et.</p>
     </div>
   </body>
