--- a/index.html
+++ b/index.html
@@ -183,8 +183,11 @@
       </div>
     </footer>
     <div class="window">
-      <form action="" class="window__form"></form>
-      <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quibusdam illo laudantium tempora modi, ducimus vitae veritatis saepe accusantium corporis et.</p>
+      <form action="" class="window__form">
+        <a href="" class="window__link">
+          <i class="fad fa-times-circle"></i>
+        </a>
+      </form>
     </div>
   </body>
 </html>
