added new styles and modalWindow

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             </a>
           </li>
         </ul>
-        <a href="" class="avatar"
+        <a href="#modalWindow" class="avatar"
           ><img src="img/avatar.jpg" alt="" class="avatar__img"
         /></a>
       </nav>
@@ -182,9 +182,9 @@
         </div>
       </div>
     </footer>
-    <div class="window">
+    <div class="window" id="modalWindow">
       <form action="" class="window__form">
-        <a href="" class="window__link">
+        <a href="#" class="window__link">
           <i class="fad fa-times-circle"></i>
         </a>
       </form>
